--- a/css_layout/layout6.css
+++ b/css_layout/layout6.css
@@ -32,32 +32,34 @@ header{
 }
 
 nav{
-    position: relative;
-    width: 200px;
-    display: flex;
-    justify-content: space-between;
+    position: absolute;
+    left: 52%;
+    width: 38%;
+    height: 30px;
+    bottom: 10%;
+    background-color: #fff;
 }
 
 nav li {
-    
+
     list-style: none; 
-    margin: 20px;
+    margin: 5px;
     display: inline;
 }
 
 nav li a{
     padding: 5px 10px;
     margin: 0;
-    border: 0px solid #f00;
-    background: #903;
     text-decoration: none;
-    color: #fff;
+    color: #cd2323;
     text-decoration: none;
     font-size: 1.2rem;
+    transition: all 0.5s;
+    cursor: pointer;
 }
 
-nav li a:hover {
-    background: #a5e691;
-    color: #000; 
-    border-color: #000;
+nav li a:hover{
+    -webkit-transform: scale(1.5);
+    transform: scale(1.5); 
 }
+
